# devterm

./: .gitignore  Cargo.toml  LICENSE  README.md  devdash.toml
docs/: CHANGELOG.md  CONFIGURATION.md  FEATURES.md
src/: config.rs  main.rs  plugin.rs
src/app/: mod.rs  state.rs  types.rs
src/collectors/: cache.rs  gather.rs  mod.rs  types.rs
src/ui/: chrome.rs  layout.rs  mod.rs  modal.rs  panes.rs  theme.rs
